feat(selection): 学生重新申请选题功能及数据权限优化
- 新增 resubmitSelection 接口允许学生在审核驳回后重新申请选题
- 为 SelectionApplyDTO 添加申请理由、学生能力说明、预期目标的必填验证
- 在 SelectionVO 中增加审核教师工号、申请理由、学生能力说明、预期目标字段
- 优化数据权限工具类，统一使用 getDepartmentIdByUserId 方法替代 getDepartmentIdByUserIdGeneral
- 在 UserController 的分页查询接口中为教师角色开放用户列表访问权限
- 扩展 SelectionPageQueryDTO 支持按学生姓名、学号、课题标题进行查询
- 重构数据权限过滤逻辑，使用通用方法处理不同角色的数据访问控制
- 移除审核意见中的建议修改内容和备注说明字段以简化流程
- 更新 TopicService 注释明确选题申请和审核事件的处理方式
- 在 TopicVO 中添加发布教师姓名和院系编码字段
- 为 BizSelection 实体添加申请理由、学生能力说明、预期目标映射字段
- 优化通知服务中的权限过滤机制，按用户类型过滤目标范围
- 配置 MyBatisPlus 拦截器优化分页和安全设置